--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "localforage": "^1.7.4",
+    "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.26.0",
+    "moment-range": "^4.0.2",
     "register-service-worker": "^1.7.1",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-worker": "^1.2.1",
+    "vuetify": "^2.2.11",
+    "vuex": "^3.1.3",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -24,6 +32,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
