--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-swal": "^1.0.0",
     "vue-worker": "^1.2.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3",
