--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vuejs",
-  "version": "0.1.0",
+  "name": "remindo",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -41,5 +41,7 @@
     "vuetify-loader": "^1.3.0",
     "workbox-cli": "^5.1.3",
     "workbox-webpack-plugin": "^5.1.3"
-  }
+  },
+  "description": "An interactive task management software",
+  "keywords": ["todo", "task management", "reminder", "todolist", "vuejs", "vuetify"]
 }
