--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "remindo",
-  "version": "1.0.0",
+  "author": "Ibrahim Abdullahi Aliyu",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,22 +13,16 @@
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.26.0",
     "moment-range": "^4.0.2",
-    "register-service-worker": "^1.7.1",
-    "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-worker": "^1.2.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3",
-    "vuex-persist": "^2.2.0",
-    "vuex-router-sync": "^5.0.0",
-    "workbox-precaching": "^5.1.3",
-    "workbox-window": "^5.1.3"
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-pwa": "^4.4.1",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
@@ -38,10 +33,15 @@
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0",
-    "workbox-cli": "^5.1.3",
-    "workbox-webpack-plugin": "^5.1.3"
+    "vuetify-loader": "^1.3.0"
   },
   "description": "An interactive task management software",
-  "keywords": ["todo", "task management", "reminder", "todolist", "vuejs", "vuetify"]
+  "keywords": [
+    "todo",
+    "task management",
+    "reminder",
+    "todolist",
+    "vuejs",
+    "vuetify"
+  ]
 }
